# WeatherWeb

./: .gitignore  pyproject.toml
WeatherApp/: settings.py  urls.py
WeatherApp/api/: api_service.py
tailwind/: tailwind.config.js
templates/: base.html  navbar.html
templates/account/: login.html  logout.html  signup.html
templates/socialaccount/snippets/: provider_list.html
users/: forms.py  models.py
users/migrations/: 0001_initial.py
weather/: forms.py  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_remove_city_country_alter_city_region.py
weather/services/: weather_api.py
weather/static/css/: input.css  output.css
weather/templates/: add_favorite.html
weather/templates/weather/: favorite.html  home.html
weather/templatetags/: weather_filters.py
