[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = "Weather web app on Python (Django)"
authors = ["Nikita Shibaev <nshib.54321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
django = "^5.2.1"
python-dotenv = "^1.1.0"
pillow = "^11.2.1"
django-allauth = "^65.9.0"
pyjwt = "^2.10.1"
cryptography = "^45.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
